// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkSelect should render correctly - no data 1`] = `
<Fragment>
  <Checkbox
    className=""
    count={0}
    id="undefined-checkbox"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</Fragment>
`;

exports[`BulkSelect should render correctly 1`] = `
<Fragment>
  <Dropdown
    className=""
    count={30}
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
        splitButtonItems={
          Array [
            <DropdownToggleCheckbox
              aria-label="Select all"
              checked={false}
              className=""
              id="some-id-toggle-checkbox"
              isChecked={null}
              isDisabled={false}
              isValid={true}
              onChange={[Function]}
            />,
          ]
        }
      />
    }
  />
</Fragment>
`;

exports[`BulkSelect should render correctly 2`] = `
<Fragment>
  <Dropdown
    className=""
    count={0}
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
        >
          Select all
        </DropdownItem>,
      ]
    }
    isOpen={false}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
        splitButtonItems={
          Array [
            <DropdownToggleCheckbox
              aria-label="Select all"
              checked={false}
              className=""
              id="toggle-checkbox"
              isChecked={null}
              isDisabled={false}
              isValid={true}
              onChange={[Function]}
            />,
          ]
        }
      />
    }
  />
</Fragment>
`;
